src/test/deca/context/valid/testCastCompatible.deca
// Description : Teste castCompatible
{
    int x = 1;
    float y = (float) (x);
}
