src/test/deca/context/invalid/testUnaryMinusWrongType.deca
// Description : opérateur unaire - avec mauvais type
{
    int x = -true;
}
